<resources>
    <string name="app_name">Design Pattern Assignment</string>
    <string name="home">Home</string>
    <string name="enter_character_name">Enter character name as nickname of account</string>
    <string name="create_account_with_archer">Create account with Archer</string>
    <string name="create_account_with_fighter">Create account with Fighter</string>
    <string name="please_enter_character_name">Please, Enter character name</string>
    <string name="account_information">Account Information</string>
    <string name="account_name">Account name:</string>
    <string name="fighting_to_increment_exp_and_coin">Fighting to increment exp and coin</string>
    <string name="exp">Exp:</string>
    <string name="coin">Coin:</string>
    <string name="character">Character:</string>
    <string name="fighter">Fighter</string>
    <string name="archer">Archer</string>
    <string name="fighting">Fighting</string>
    <string name="plus_message">Plus: %1$d exp and %2$d coin</string>
    <string name="create_account">Create Account</string>
    <string name="practicing_to_increment_attack_speed">Practicing to increment attack speed</string>
    <string name="practicing">Practicing</string>
    <string name="limit_speed_message">Speed is limited</string>
    <string name="plus_speed_message">Plus: %1$d attack speed</string>
</resources>